--- a/style.css
+++ b/style.css
@@ -2,21 +2,23 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px solid red;
-}
-
-.wrapper {
-  background-color: aliceblue;
-  display: grid;
-  grid-template: 10vh 80vh 10vh / 1fr;
-  max-width: 1024px;
-  min-width: 600px;
-  margin: 0 auto;
 }
 
 a {
   text-decoration: none;
 }
+
+.wrapper {
+  background-color: aliceblue;
+  display: grid;
+  grid-template: 10vh auto 5vh / 1fr;
+  grid-gap: 1vh;
+  max-width: 1024px;
+  min-width: 600px;
+  margin: 0 auto;
+}
+
+/* HEADER */
 
 header {
   display: grid;
@@ -38,16 +40,22 @@ header {
 }
 
 .header__logo {
-  font-size: 24px;
+  font-size: 2rem;
   display: grid;
   justify-content: center;
   align-content: center;
+  border: 4px solid green;
 }
+
+/* MAIN */
+
+/* CONTACTS */
 
 .contacts {
   display: flex;
   justify-content: space-evenly;
   justify-items: center;
+  margin: 0 2vh;
 }
 
 .contacts__info {
@@ -62,4 +70,77 @@ header {
 
 .contacts__info__data {
   font-size: 1.5rem;
+}
+
+/* SKILLS */
+
+.skills {
+  display: inline-grid;
+  grid-template: 10vh repeat(4, 1fr) / 5vh auto 5vh;
+  height: 500px;
+  grid-gap: 1vh;
+  margin-top: 2vh;
+  font-size: 1.2rem;
+}
+
+.skills__title {
+  grid-column: 1 / 4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: skyblue;
+  text-transform: uppercase;
+}
+
+.skills__abilities {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.skills__abilities > div::before {
+  content: "- ";
+}
+
+.skills__codecademy {
+  grid-row: 3 / 4;
+  grid-column: 2 / 3;
+}
+
+.skills_codecademy-profile {
+  margin-bottom: 2vh;
+}
+
+.skills__codecademy-list {
+  display: flex;
+  flex-flow: row wrap;
+  font-size: 2rem;
+}
+
+.skills__codecademy-logo {
+  height: 5vh;
+}
+
+.skills__codewarsprofile {
+  grid-row: 4 / 5;
+  grid-column: 2 / 3;
+  justify-self: start;
+  align-self: center;
+}
+
+.skills__codewarsgithub {
+  grid-row: 5 / 6;
+  grid-column: 2 / 3;
+  justify-self: start;
+  align-self: center;
+}
+
+/* FOOTER */
+
+.footer {
+  display: grid;
+  justify-content: center;
+  align-content: center;
 }
