--- a/style.css
+++ b/style.css
@@ -8,8 +8,13 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  font-weight: 600;
+}
+
 body {
   background-color: aliceblue;
+  font-family: 'PT Serif', serif;
 }
 
 .wrapper {
@@ -50,6 +55,23 @@ header {
   align-items: center;
   list-style-type: none;
   border: 4px solid green;
+  font-size: 1.1rem;
+}
+
+.header__navigation > li > a {
+  color: blue;
+}
+
+.header__navigation > li > a:hover {
+  color: rgb(0, 0, 151);
+  font-size: 1.5rem;
+}
+
+.header__navigation > li > a:active {
+  color: rgb(84, 59, 95);
+  font-size: 1.5rem;
+  box-shadow: 0px 5px 0px rgb(84, 59, 95);
+  font-weight: 400;
 }
 
 .header__logo {
@@ -89,8 +111,8 @@ header {
 
 .skills {
   display: grid;
-  grid-template: 60px repeat(5, 1fr) / 40px auto 40px;
-  height: 500px;
+  grid-template: repeat(3, 60px) 1fr repeat(2, 60px) / 40px auto 40px;
+  height: 450px;
   font-size: 1.2rem;
 }
 
@@ -118,7 +140,9 @@ header {
 .skills__codecademy {
   grid-row: 4 / 5;
   grid-column: 2 / 3;
+  align-self: center;
 }
+
 
 .skills_codecademy-profile {
   display: flex;
@@ -132,6 +156,14 @@ header {
   flex-direction: row;
   font-size: 1.3rem;
   justify-content: space-between;
+}
+
+.skills__codecademy-list > div > a:hover {
+  font-weight: 600;
+}
+
+.skills__codecademy-list > div > a::before {
+  content: url(./img/complete_25_17.png);
 }
 
 .skills__codecademy-list-a,
@@ -216,12 +248,24 @@ header {
     justify-content: space-between;
 }
 
+.education__master {
+      padding-top: 30px;
+}
+
+.education__university {
+  padding: 10px 0;
+}
+
 /* ENGLISH */
 
 .english__data {
   margin: 20px 60px;
   font-size: 1.3rem;
   padding-left: 15px;
+}
+
+.english__data > ul > li {
+  padding: 10px 0;
 }
 
 /* FOOTER */
